Sidebar WIP. TODO: Finish SCSS, make sure that it collapses when window width is too short. Finish contents of sidebar. Add usage of new endpoints

--- a/src/app/components/tabbar/tabbar.component.scss
+++ b/src/app/components/tabbar/tabbar.component.scss
@@ -46,6 +46,7 @@ body {
   text-decoration: none;
   &:focus,
   &:hover {
+    cursor: pointer;
     outline: none;
     .material-icons {
       font-family: 'Material Icons';
@@ -79,4 +80,32 @@ body {
     70%
   );
   transition: 0.25s ease;
+}
+
+mat-sidenav {
+  margin: 16px;
+  width: 325px;
+  border-right: none;
+  background: mix(
+    colors.$background-primary-color-dark,
+    colors.$tabbar-text-primary-color,
+    60%
+  );
+  color: white;
+  border-radius: 10px;
+  padding: 16px;
+  text-align: left;
+}
+.content {
+  height: calc(100vh - 102px);
+  margin: 16px;
+  margin-left: 32px;
+  display: flex;
+  background: #303030;
+  color:  white;
+  border-radius: 10px;
+}
+
+mat-sidenav-container {
+ height: calc(100vh - 70px);
 }
